--- a/src/main/resources/fxml/nakyma.fxml
+++ b/src/main/resources/fxml/nakyma.fxml
@@ -16,6 +16,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
@@ -34,8 +35,8 @@
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="333.8000000000002" minWidth="0.0" prefWidth="0.0" />
    </columnConstraints>
    <rowConstraints>
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="150.00000610351563" minHeight="0.0" prefHeight="18.400016784667997" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="52.79999389648438" minHeight="10.0" prefHeight="49.59999084472656" valignment="BOTTOM" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="150.00000610351563" minHeight="0.0" prefHeight="16.80000915527343" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="312.80000000000007" minHeight="0.0" prefHeight="85.59998779296878" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="615.0000122070312" minHeight="10.0" prefHeight="615.0000122070312" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="95.80002441406248" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
@@ -49,14 +50,6 @@
             <Insets right="25.0" top="25.0" />
          </GridPane.margin>
       </Label>
-      <Button fx:id="LogoutBtn" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="30.0" prefWidth="107.0" text="LOGOUT" GridPane.columnIndex="7" GridPane.halignment="RIGHT">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-         <GridPane.margin>
-            <Insets right="25.0" top="25.0" />
-         </GridPane.margin>
-      </Button>
       <ImageView fx:id="logoView" fitHeight="138.0" fitWidth="483.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowSpan="2" />
       <TextField fx:id="searchBar" prefHeight="39.0" prefWidth="1149.0" promptText="Etsi..." GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2">
          <font>
@@ -160,6 +153,14 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Button>
+            <Button fx:id="lisaaresurssiBtn" mnemonicParsing="false" onMouseClicked="#lisaaresurssiNappiPainettu" prefHeight="39.0" prefWidth="348.0" text="LISÄÄ RESURSSI">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="25.0" />
+               </VBox.margin>
+            </Button>
          </children>
          <padding>
             <Insets left="10.0" right="10.0" />
@@ -169,6 +170,26 @@
          </GridPane.margin>
       </VBox>
       <DatePicker fx:id="datePicker" disable="true" opacity="0.0" prefHeight="35.0" prefWidth="330.0" GridPane.columnIndex="3" />
+      <HBox prefHeight="26.0" prefWidth="234.0" GridPane.columnIndex="7" GridPane.valignment="BOTTOM">
+         <children>
+            <Button fx:id="LogoutBtn" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="30.0" prefWidth="107.0" text="LOGOUT">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+               <HBox.margin>
+                  <Insets right="10.0" />
+               </HBox.margin>
+            </Button>
+            <Button fx:id="salasananvaihtoBtn" mnemonicParsing="false" onMouseClicked="#salasananvaihtoNappiPainettu" prefHeight="30.0" prefWidth="123.0" text="SALASANAN VAIHTO">
+               <font>
+                  <Font name="System Bold" size="10.0" />
+               </font>
+            </Button>
+         </children>
+         <GridPane.margin>
+            <Insets top="5.0" />
+         </GridPane.margin>
+      </HBox>
    </children>
    <padding>
       <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
